    code in do_command, clarifying how logged-out commands are handled,
    and fixing a reference to freed memory.

  - Improved performance of scramble() and reverse() on strings with
    less ANSI color.

  - Avoided unnecessary attribute scans in Hearer().

  - Removed duplicated code in handle_ears().

  - Minor nitpicks in sweep_check() and fh_hear_bit().

3.1 Patchlevel 2

  - Startmush now accept start/stop/restart/reboot switches. You can
    also pass the name of the config file you want to use instead of
    the default 'mush.config' one.

  - Removed hardcoded binaries path from the engine, a new command
    line switch ( -b binpath ) new feed the engine with the correct
    value. The engine can now run its binaries from any directory,
    not just ./bin/. (slave path was hardcoded.)

  - Removed hardcoded textfiles path from the engine, a new command
    line switch ( -t textpath ) now feed the engine with the 
    correct value. This eliminate the need of adding every
    textfile in the configfile if someone want to change the
    game's text directory. 

  - The engine is now able to find the data directory and names of 
    the db/crash files from the command line. ( -d datapath, 
    -g gdbmfile and -k crashfile) The configuration parameters 
    'database_home',  'crash_database' and 'gdbm_database' are 
    still avalable for backward compatibility.

  - A new helper (logwatch) replace the 'tail'/'awk' script
    used to print the first lines of the log during statup.
    this solve the problem of having a zombie tail command 
    left running when awk cut its pipe.

  - Added EXIT, ROOMS and VEHICLE topics in qhelp.txt. 

  - Fixed a memory leak in sql_query function where result was stored but
    never freed so whenever a query returns an empty result it leaks a 
    mysql result structure. [3.0; Dan Ryan]

  - Added /spoof switch for @fsay/@fpose/@femit.

  - Modified the documentation to properly reference @speechformat 